# libavif-Android-sample

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gain/avif/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gain/avif/demo/: MainActivity.kt
app/src/main/java/com/gain/avif/demo/composeviews/: AVIFDecodeView.kt  AVIFEncodeView.kt  AVIFViewModel.kt
app/src/main/java/com/gain/avif/demo/ui/navigation/: AnimationTransition.kt  NavigationScreen.kt
app/src/main/java/com/gain/avif/demo/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/gain/avif/demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libavif/: build.gradle
libavif/src/androidTest/java/com/gain/libavif/: ExampleInstrumentedTest.kt
libavif/src/main/: AndroidManifest.xml
libavif/src/main/cpp/: CMakeLists.txt  build.sh  libavif_jni.cc
libavif/src/main/java/com/gain/libavif/: AvifCodec.java
libavif/src/test/java/com/gain/libavif/: ExampleUnitTest.kt
